# codex-hsog

./: README.md
.github/: dotslash-config.json
.github/release-assets/: README-posix.txt  README-windows.txt  start-codex-hsog.ps1  start-codex-hsog.sh
.github/workflows/: ci.yml  rust-ci.yml  rust-release-windows.yml  rust-release.yml  shell-tool-mcp.yml
codex-rs/: Cargo.toml  README.md
codex-rs/cli/src/: main.rs
codex-rs/codex-api/src/: lib.rs
codex-rs/codex-api/src/endpoint/: chat_completions.rs
codex-rs/codex-api/src/requests/: mod.rs  translation.rs
codex-rs/codex-api/src/sse/: chat.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: client.rs  model_provider_info.rs
codex-rs/core/src/config/: mod.rs
codex-rs/core/src/models_manager/: manager.rs
codex-rs/core/tests/: responses_headers.rs
codex-rs/core/tests/suite/: client.rs  client_websockets.rs  (+2 more)
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: event_processor_with_human_output.rs  lib.rs
codex-rs/tui/: Cargo.toml  README.md  README_WEBSOCKET.md  pyproject.toml  python_websocket_client.py
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  history_cell.rs  lib.rs  secure_keys.rs  slash_command.rs  updates.rs
docs/: install.md
python/: README_APP_SERVER_STDIO_GATEWAY.md  README_APP_SERVER_WS_REPL.md  README_WEBSOCKET.md  app_server_stdio_gateway.py  app_server_ws_repl.py  codex_gui_client.py  pyproject.toml  python_websocket_client.py  requirements.txt
python/tests/: test_app_server_stdio_gateway.py  test_app_server_ws_repl.py  test_codex_gui_client.py
(+11 files in other folders)
