[project]
name = "codex-ws-client"
version = "0.1.0"
description = "Codex WebSocket Client - Real-time streaming from Codex CLI"
readme = "README_WEBSOCKET.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "prompt-toolkit>=3.0.39",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python_websocket_client.py"]
